# esp-openclaw-node

./: README.md  idf_component.yml
.github/workflows/: upload_component.yml
components/esp-openclaw-node/: Kconfig  README.md
components/esp-openclaw-node/include/: esp_openclaw_node.h
components/esp-openclaw-node/private_include/: esp_openclaw_node_internal.h
components/esp-openclaw-node/src/: esp_openclaw_node.c  esp_openclaw_node_protocol.c  esp_openclaw_node_registry.c
examples/: README.md
examples/esp-box-3-display/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp-box-3-display/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  esp_openclaw_node_box_cmd.c  esp_openclaw_node_box_cmd.h  esp_openclaw_node_box_display.c  esp_openclaw_node_box_display.h  esp_openclaw_node_box_display_node_cmd.c  esp_openclaw_node_box_display_node_cmd.h  idf_component.yml
